--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Carthage/Checkouts/State"]
 	path = Carthage/Checkouts/State
-	url = ssh://git@ajatar.empiricalmagic.com:30001/Modules/State.git
+	url = https://github.com/rjstelling/State.git
