--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Prototypes/SSESwift/SSESwift.xcodeproj/project.xcworkspace/xcuserdata
 Carthage/Build
 Projects/SSEKit/SSEKit.xcodeproj/xcuserdata
+*/~LEGACY/*
