--- a/Projects/SSEKit/SSEKit.xcodeproj/xcshareddata/xcschemes/SSEKit macOS.xcscheme
+++ b/Projects/SSEKit/SSEKit.xcodeproj/xcshareddata/xcschemes/SSEKit macOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2AB7AD0F1D53740E00A5F64A"
-               BuildableName = "SSEKit macOS.framework"
+               BuildableName = "SSEKit.framework"
                BlueprintName = "SSEKit macOS"
                ReferencedContainer = "container:SSEKit.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2AB7AD0F1D53740E00A5F64A"
-            BuildableName = "SSEKit macOS.framework"
+            BuildableName = "SSEKit.framework"
             BlueprintName = "SSEKit macOS"
             ReferencedContainer = "container:SSEKit.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2AB7AD0F1D53740E00A5F64A"
-            BuildableName = "SSEKit macOS.framework"
+            BuildableName = "SSEKit.framework"
             BlueprintName = "SSEKit macOS"
             ReferencedContainer = "container:SSEKit.xcodeproj">
          </BuildableReference>
